[package]
name = "kvs"
version = "0.1.0"
authors = ["bocc <szevasztavasz@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"

[dev-dependencies]
clap = "2.33.0"
assert_cmd = "0.11.0"
predicates = "1.0.0"